fixed kbd tag in dark mode

--- a/themes/hugoplate/assets/css/module-overrides.css
+++ b/themes/hugoplate/assets/css/module-overrides.css
@@ -63,3 +63,34 @@ code {
     color: #f8f8f2 !important;
   }
 }
+
+kbd {
+  /* Basic styling */
+  display: inline-block;
+  padding: 3px 5px;
+  font:
+    11px "SFMono-Regular",
+    Consolas,
+    "Liberation Mono",
+    Menlo,
+    monospace;
+  line-height: 10px;
+  vertical-align: middle;
+  border-radius: 3px;
+
+  /* Light mode */
+  color: #444d56;
+  background-color: #fafbfc;
+  border: 1px solid #d1d5da;
+  box-shadow: inset 0 -1px 0 #d1d5da;
+}
+
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+  kbd {
+    color: #c9d1d9;
+    background-color: #2f3439;
+    border: 1px solid #6e7681;
+    box-shadow: inset 0 -1px 0 #6e7681;
+  }
+}
